--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "name": "collaborative-canvas",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Real-time collaborative drawing canvas using Socket.IO",
+  "main": "server/server.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js"
   },
-  "keywords": [],
+  "engines": {
+    "node": "18.x"
+  },
+  "keywords": [
+    "collaborative",
+    "canvas",
+    "socket.io",
+    "realtime",
+    "drawing"
+  ],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1",
-    "socket.io": "^4.8.3"
+    "express": "^4.19.2",
+    "socket.io": "^4.8.3",
+    "cors": "^2.8.5"
   }
 }
